--- a/src/components/MainScreen.css
+++ b/src/components/MainScreen.css
@@ -10,9 +10,17 @@
     width: 300px;
     height: 300px;
     margin: 0 auto;
-    margin-top: 7rem;
+    margin-top: 2rem;
+
+    
 
 
+}
+.sub--text {
+    text-align: center;
+    margin-top: 4rem;
+    color: #002A32;
+   
 }
 
 .button--section {
@@ -21,7 +29,7 @@
     color: #002A32;
     text-transform: uppercase;
     gap: 1rem;
-    margin-top: 7rem;
+    margin-top: 4rem;
 }
 .play {
     
@@ -67,4 +75,15 @@
 
   .main--section {
     margin: 0 auto;
+  }
+
+  @media screen and (min-width: 768px){
+    .timer {
+       
+        margin-top: 7rem;
+        
+    
+    
+    }
+    
   }
